# frper

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
sql/: client_setting.sql
src/: app.rs  event.rs  logger.rs  main.rs  response.rs  service.rs  types.rs
src/routes/: mod.rs  settings.rs
views/: about.html  index.html  proxy_set.html
views/css/: framework.css  index.css  proxy.set.css
views/js/: app.js  init.js  layout.js  logger.js  proxy_set.js  set.js  utils.js
views/js/components/: switch.js
windows_platform_resource/: dpi-aware.mainfest
