[package]
name = "frper"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.19"
sciter-rs = "0.5.58"
flume = "0.10.13"
parking_lot = "0.12.1"
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = "0.4.19"
uuid = { version = "1", features = ["v4"] }
toml = "0.5.9"
once_cell = "1.13"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.24.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "frper.exe"
LegalCopyright = "Copyright fuyoo © 2022"
ProductName = "Frper"
FileDescription = "Frper"

[package.metadata.frp]
version = "0.44.0"
